--- a/style.css
+++ b/style.css
@@ -100,3 +100,25 @@ body.dark .relogio{
     font-size: 8em;
     color: #fff;
 }
+
+
+@media screen and (max-width:767px) {
+    #body_do_relogio{
+        width: 100vw;
+        height: 100vh;
+    }
+    
+    #container{
+        width: 70%;
+        height: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .relogio{
+        width: 55%;
+        height: 240px;
+    }
+}
